# azure-storage-table

./: Main.hs  azure-storage-table.cabal
Cloud/Azure/: Storage.hs
Cloud/Azure/Storage/: Aeson.hs  Core.hs  Table.hs
